------------------------------------------------------------------------------
This file is used to record changes made to the CVS database. Please add to
the top of this file before committing any changes.

Al
------------------------------------------------------------------------------
Thu Sep 30 10:34 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Fixed unbalanced map_buffer calls in minix_add_entry().

Fri Sep 24 16:24 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Fixes and code cleanups in fs code by Thomas McWilliams.
	
Thu Sep 16 12:04 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Fixes and code cleanups in fs code by Thomas McWilliams.

Tue Sep 14 19:32 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Fix to problem with fchown() by Blaz Antonic.

Tue Sep 14 19:29 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Fixed types of all string lengths in namei code to size_t.

	* Fixed problem with 14 char filenames by Blaz Antonic.

Tue Sep 14 19:27 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Fix type of task->child_wait by Thomas McWilliams.

Fri Aug 27 14:11 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Added CONFIG_SHORT_FILES which limits fds to 16.

	* Removed unused supplementary groups, and made into a config option.

	* Made link_count a global variable, rather than per task.

	* Optimised the way read(2) and write(2) check file descriptors.

	* Made character access to block devices an option.

	* Cleaned up and tested signal code.

	* Fixed cleaning up of signals and fds in close(2).

	* Many bug fixes by Thomas G. McWilliams to fs code.

	* Final version tweaks for 0.0.79

Thu Aug 26 19:39 CEST 1999	Arnaud Launay  <zoro@multimania.com>

	* Some additions and clean-ups in docs.

Mon Aug 23 11:19 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Fixed tty bug that prevented boot/root disk from working.

Wed Aug 18 19:40 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
